--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "express": "^4.19.2"
   },
   "scripts":{
-    "start": "node server.mjs"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   }
 }
