--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "start": "npm run dev",
+    "start": "node server.mjs",
     "preview": "node server.mjs",
     "dev": "nodemon server.mjs"
   }
