--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage":"",
+  "homepage": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "path": "^0.12.7"
