--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --host",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "npm run build && vite preview --host",
+    
+    "predeploy": "node renameconfig.js && npm run build",
+    "deploy": "gh-pages -d dist && node revertconfig.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "fs": "^0.0.1-security",
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
   }
