--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "npm run build && vite preview --host",
+
+    "renameconfig": "cd buildscripts && node renameconfig.js",
+    "revertconfig": "cd buildscripts && node revertconfig.js",
+    "copydist": "cd buildscripts && node copydist.js",
     
-    "predeploy": "node renameconfig.js && npm run build",
-    "deploy": "gh-pages -d dist && node revertconfig.js"
+    "predeploy": "npm run renameconfig && npm run build",
+    "deploy": "gh-pages -d dist && npm run revertconfig && npm run build && npm run copydist"
   },
   "dependencies": {
     "react": "^18.2.0",
