--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "peer": "^1.0.2"
   },
   "scripts": {
     "start": "node server.mjs",
