--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "deploy": "gh-pages -d dist && npm run revertconfig && npm run build"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "peerjs": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
