--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://moefingers.github.io/milestown2/#/",
   "scripts": {
     "start": "npm run dev",
     "dev": "vite --host",
