--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+    "name": "milestown2parent",
+    "private": true,
+    "version": "2.0.0",
+    "type": "module",
+    "license": "MIT",
+    "homepage": "https://moefingers.github.io/milestown2/#",
     "scripts": {
         "start": "npm run frontend",
         "frontend": "cd frontend && npm start",
